# ex_imap_codec

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  mix.exs
lib/: ex_imap_codec.ex
native/imap_codec_nif/: Cargo.toml  README.md
native/imap_codec_nif/src/: lib.rs
test/: ex_imap_codec_test.exs
